# ThePredMain

./: .env.example  .env.production.example  .gitignore  ADMIN_TEST_DATA_GUIDE.md  CLAUDE.md  CONTEXT.md  DEBUG_COMMANDS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_S3_UPDATE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_ADMIN_FIXES.md  DEPLOY_FIX_TELEGRAM_AUTH.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_LEADERBOARD_UPDATES.md  DEPLOY_PROFILE_FIXES.md  DEPLOY_SUPPORT_NOTIFICATIONS.md  DOCKER_SETUP.md  FINAL_DEPLOY_v2.md  HOTFIX_DEPLOYMENT.md  LEADERBOARD_DEPLOY.md  MISSIONS_DEPLOYMENT_GUIDE.md  MISSIONS_ICONS_GUIDE.md  MISSIONS_SUMMARY.md  Makefile  PM2_DEPLOYMENT_GUIDE.md  PREDICTION_MECHANICS.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_FIX_NOW.md  README.md  SSL_SETUP.md  TODO.md  UPLOAD_ICONS_TO_S3.md  WEBAPP_AUTH_UPDATE.md  create_leaderboard_tables.py  docker-compose.infrastructure.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  (+8 more)
admin/: Dockerfile  main.py  requirements.txt
admin/templates/: base.html  broadcast.html  (+9 more)
backend/: Dockerfile  alembic.ini  broadcast_scheduler.py  ecosystem.config.js  entrypoint.sh  fix_broadcast_table.py  leaderboard_scheduler.py  requirements.txt  seed_data.py  telegram_worker.py
bot/: Dockerfile  config.py  main.py  notification_worker.py  requirements.txt
landing/: Dockerfile  main.py  requirements.txt
nginx/: nginx.conf
utils/: create_leaderboard_tables.py  upload_ai_icons_to_s3.py
webapp/: Dockerfile  api_client.py  main.py  requirements.txt
документация/: мои пояснения.txt  общий-конепт.txt  тз-мвп.txt
(+101 files in other folders)
