[tool.poetry]
name = "thepred"
version = "0.1.0"
description = "ThePred - Prediction Markets Platform"
authors = ["alluc <mobiss11@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = "^5.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
aiohttp = "^3.9.1"
sentry-sdk = "^1.39.2"
prometheus-client = "^0.19.0"
python-dotenv = "^1.0.0"
quart = "^0.19.4"
jinja2 = "^3.1.3"
hypercorn = "^0.16.0"
aiogram = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
